# Adaptation-Engine

./: .cproject  .project  Adaptation-Engine.cpp  CMakeLists.txt  Makefile
adaptation/: minizinc.cc  minizinc.hpp
include/adaptation/: minizinc.hpp
include/client/: mironDDS_listener.hpp  query_client.hpp  variant_client.hpp
include/queries/: abort_current_skill.hpp  change_parameter.hpp  change_velocity.hpp  positions.hpp  query.hpp
listener/: TopicVar.cc  TopicVar.h  listeners_impl.cpp  query_client.hpp  variant_client.hpp
model/: Input.cc  Input.h  Output.cc  Output.h  SmartsoftInf.cc  SmartsoftInf.h  TopicVar.cc  TopicVar.h
